<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.LoginScreen">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1">

            <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textCursorDrawable="@null"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1">

            <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@null"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="30dp"
                android:textAllCaps="false"
                android:background="@drawable/gradient"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceMedium"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_gravity="center"
                android:id="@+id/registerText"/>

        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:visibility="invisible"/>
    </LinearLayout>

</FrameLayout>