<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddMemberScreen"
        android:orientation="vertical"
        android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="3dp"
            android:background="@android:color/white">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

            <ImageView
                    android:id="@+id/backImageAddMember"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/keyboard_backspace"
                    android:tint="@android:color/black"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>


            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_home"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    app:title="@string/add_member"
                    android:layout_height="match_parent"
                    app:titleTextColor="@android:color/black"
                    android:background="@android:color/white"
            >

            </android.support.v7.widget.Toolbar>

            <TextView
                    android:id="@+id/doneTextAddMember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done_"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:enabled="false"
                    android:textColor="#99AAAAAA"
            />

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

        <EditText
                android:id="@+id/input_member_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:hint="@string/enter_username"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="22sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

        <ProgressBar
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimary"
                android:indeterminateTintMode="src_atop"
                android:layout_below="@+id/input_member_username"
                android:layout_marginTop="20dp"
                android:layout_centerInParent="true"
                android:id="@+id/progressBar_add_member"/>
    </RelativeLayout>

</LinearLayout>