<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        tools:context=".activities.CreatePostScreen">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="3dp"
            android:background="@android:color/white">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

            <ImageView
                    android:id="@+id/backImagePost"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/keyboard_backspace"
                    android:tint="@android:color/black"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>


            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_post"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    app:title="@string/post"
                    app:titleTextColor="@android:color/black"
                    android:background="@android:color/white"
            >

            </android.support.v7.widget.Toolbar>

            <TextView
                    android:id="@+id/donePost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done_"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:enabled="false"
                    android:textColor="#99AAAAAA"
            />

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme"
                android:layout_margin="12dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1">

            <EditText
                    android:id="@+id/input_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/whats_on_your_mind"
                    android:scrollbars="vertical"
                    android:scrollbarThumbVertical="@drawable/scrollbar"
                    android:scrollbarSize="5dp"
                    android:maxHeight="130dp"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textCursorDrawable="@null"/>

        </android.support.design.widget.TextInputLayout>

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/colorPrimary"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:id="@+id/progressBar_create_post"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:visibility="gone"/>

    </LinearLayout>


</LinearLayout>