<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.CreateBandScreen"
        android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="3dp"
            android:background="@android:color/white">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

            <ImageView
                    android:id="@+id/backImageCreateBand"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/keyboard_backspace"
                    android:tint="@android:color/black"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>


            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_home"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    app:titleTextColor="@android:color/black"
                    android:background="@android:color/white"
            >

            </android.support.v7.widget.Toolbar>

            <TextView
                    android:id="@+id/doneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done_"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:enabled="false"
                    android:textColor="#99AAAAAA"
                    />

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:id="@+id/groupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_above="@+id/selectImagelayout"
                android:hint="@string/enter_group_name"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="22sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

        <FrameLayout
                android:id="@+id/selectImagelayout"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:id="@+id/cameraImage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/camera"
                        android:tint="@android:color/darker_gray"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:gravity="center"
                          android:text="@string/add_photo"
                          android:textColor="@android:color/darker_gray"
                          android:layout_centerHorizontal="true"
                          android:layout_below="@+id/cameraImage"/>

            </RelativeLayout>

        </FrameLayout>

        <ImageView
                android:id="@+id/bandImage"
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
        />

    </RelativeLayout>

</LinearLayout>