<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        tools:context=".activities.HomeScreen">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="3dp"
            android:background="@android:color/white">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">


            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_home"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    app:titleTextColor="@android:color/black"
                    android:background="@android:color/white"
                    app:title="Band">

            </android.support.v7.widget.Toolbar>

            <ImageView
                    android:id="@+id/toolbar_add_band"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/plus_1"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginEnd="13dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/invitesLayout"
                    android:visibility="gone">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/invites"/>

                <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:id="@+id/RV_Invites">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <ProgressBar
                    android:id="@+id/progressBar_Invites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/colorPrimary"
                    android:indeterminate="true"
                    android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/yourBandsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp"
                    android:text="@string/your_bands"
                    android:textColor="@android:color/black"
                    android:visibility="gone"
            />


            <android.support.v7.widget.CardView
                    android:id="@+id/createBandCard"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardBackgroundColor="#f1f1f1"
                    app:cardCornerRadius="7dp"
                    android:layout_gravity="center"
                    android:layout_margin="25dp"
                    android:visibility="gone">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center"
                >

                    <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/plus_1"
                            android:layout_margin="5dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_band_found"
                            android:layout_margin="5dp"
                            android:textAppearance="?android:textAppearanceMedium"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:layout_marginBottom="13dp"
                    android:layout_marginTop="31dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RV_home">

            </android.support.v7.widget.RecyclerView>

            <ProgressBar
                    android:id="@+id/progressBarHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/colorPrimary"
                    android:indeterminate="true"
                    android:layout_gravity="center"/>

        </FrameLayout>

    </LinearLayout>
</LinearLayout>